custom function to score top10 accuracy

--- a/GEA.ipynb
+++ b/GEA.ipynb
@@ -6,7 +6,7 @@
       "name": "GEA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQvQB8UKIq2mKfBYtKmBhm"
+      "authorship_tag": "ABX9TyNTMRajTPVX6bsg6TAG6WaY"
     },
     "kernelspec": {
       "name": "python3",
@@ -2116,6 +2116,93 @@
       "cell_type": "code",
       "metadata": {
         "id": "ywcHn9z_Dqpv"
+      },
+      "source": [
+        "# Construct custom top-k accuracy scorer \n",
+        "# Using Scikit-Learn defined approach \n",
+        "https://scikit-learn.org/stable/modules/model_evaluation.html#implementing-your-own-scoring-object"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "quNN34QrFPOw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nB0HkoHnFROv"
+      },
+      "source": [
+        "###Construct custom top-k accuracy scorer. The goal here is to narrow down the list of possible labs of origin and evaluate model performance based on top-ten accuracy i.e we consider a prediction correct if the true-lab of origin is in the top ten most likely labs \n",
+        "###Using Scikit-Learn defined approach \n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "https://scikit-learn.org/stable/modules/model_evaluation.html#implementing-your-own-scoring-object"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uO8zv7UJGFoM"
+      },
+      "source": [
+        "def top10_accuracy_scorer(estimator, X, y):\n",
+        "  \"\"\"A custom scorer that evaluates a model on whether the correct label is in \n",
+        "    the top 10 most probable predictions.\n",
+        "\n",
+        "    Args:\n",
+        "        estimator (sklearn estimator): The sklearn model that should be evaluated.\n",
+        "        X (numpy array): The validation data.\n",
+        "        y (numpy array): The ground truth labels.\n",
+        "\n",
+        "    Returns:\n",
+        "        float: Accuracy of the model as defined by the proportion of predictions\n",
+        "               in which the correct label was in the top 10. Higher is better.\n",
+        "  \"\"\"\n",
+        "\n",
+        "   # predict the probabilities across all possible labels for rows in our training set\n",
+        "  probas = estimator.predict_proba(X)\n",
+        "    \n",
+        "    # get the indices for top 10 predictions for each row; these are the last ten in each row\n",
+        "    # Note: We use argpartition, which is O(n), vs argsort, which uses the quicksort algorithm \n",
+        "    # by default and is O(n^2) in the worst case. We can do this because we only need the top ten\n",
+        "    # partitioned, not in sorted order.\n",
+        "    # Documentation: https://numpy.org/doc/1.18/reference/generated/numpy.argpartition.html\n",
+        "  top10_idx = np.argpartition(probas, -10, axis=1)[:, -10:]\n",
+        "    \n",
+        "  # index into the classes list using the top ten indices to get the class names\n",
+        "  top10_preds = estimator.classes_[top10_idx]\n",
+        "\n",
+        "  # check if y-true is in top 10 for each set of predictions\n",
+        "  mask = top10_preds == y.reshape((y.size, 1))\n",
+        "  \n",
+        "  # take the mean\n",
+        "  top_10_accuracy = mask.any(axis=1).mean()\n",
+        "\n",
+        "  return top_10_accuracy"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XnA47NQJJBo1"
       },
       "source": [
         ""
