update-aws-s3-df-access

--- a/GEA.ipynb
+++ b/GEA.ipynb
@@ -6,7 +6,7 @@
       "name": "GEA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNExwcVC6C6hJfGapBwRzqo"
+      "authorship_tag": "ABX9TyOEPmuV06GWXbMH+OorGOEe"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +40,7 @@
       },
       "source": [
         "# Load data \n",
-        "train_values = pd.read_csv('https://drivendata-prod.s3.amazonaws.com/data/63/public/train_values.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20201016%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201016T193540Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=639aae3f09d47073ab55bab0564a48a04383c3b69c7fa43cdb458baf2c3ea6bf',index_col='sequence_id')"
+        "train_values = pd.read_csv('',index_col='sequence_id')"
       ],
       "execution_count": null,
       "outputs": []
@@ -51,7 +51,7 @@
         "id": "jPTzn9u9bbK7"
       },
       "source": [
-        "train_label = pd.read_csv('https://drivendata-prod.s3.amazonaws.com/data/63/public/train_labels.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20201016%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201016T193540Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=97661f36ac66ac362e7543d54eb89822493db4cdf51db52265b3186e58f70266',index_col='sequence_id')"
+        "train_label = pd.read_csv('',index_col='sequence_id')"
       ],
       "execution_count": null,
       "outputs": []
@@ -62,7 +62,7 @@
         "id": "FDKS9rmJb5d0"
       },
       "source": [
-        "test_values= pd.read_csv('https://drivendata-prod.s3.amazonaws.com/data/63/public/test_values.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20201016%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201016T193540Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=e1181b183ad56a410368634d15f2e4161ec0d5728ffe99fd1987ea25068404be',index_col='sequence_id')"
+        "test_values= pd.read_csv('',index_col='sequence_id')"
       ],
       "execution_count": null,
       "outputs": []
